--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "node server.js"
@@ -8,7 +12,6 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "mulher.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
